@@ -1,3 +1,10 @@
+2011-01-14  Jean-Louis Martineau <martineau@zmanda.com>
+	* ndmp-src/amndma_tape_simulator.c: Use full_read.
+	* ndmp-src/ndma_tape.c: Use ndmchan_n_avail_record to guarantee space
+	  for a record.
+	* ndmp-src/ndml_chan.c (ndmchan_n_avail_record): New function.
+	* ndmp-src/ndmlib.h  (ndmchan_n_avail_record): New prototype.
+
 2011-01-11  Jean-Louis Martineau <martineau@zmanda.com>
 	* server-src/planner.c: Change message of "timeout waiting for REP" to
 	  "Some estimate timeout on %s, using server estimate if possible".
